fixes ISSUE-47093: Remove guava usage from java code
- InitialSetupUtility
  - Stop using Charsets.UTF_8 constants from guava library. Instead use
standard java StandardCharsets class
  - Simplify reading file by using Files.ReadString(Path,Charset)
    directly avoid the intermediate byte[]
- CrossOrganizationReference
  - Use standard Collections.reverse method instead of guava
    Lists.reverse
    Note that JDK function modify the argument in place instead of
returning a 'reversed' view. However with that usage here (cleanup after
unit-tests & .clear()-ing the list just afterwards no need to clone the
list.
- AllowedOrganizationTest
  - Change away from guava ImmutableMap.builder() replace it by standard
    java
    - Map.Of(Key,Value,Key,Value, ...) for the simple case
    - Map.ofEntries for the slightly more complex case.